@@ -724,7 +724,6 @@ __ZN7WebCore4Page16setDefersLoadingEb
 __ZN7WebCore4Page17willMoveOffscreenEv
 __ZN7WebCore4Page18removeSchedulePairEN3WTF10PassRefPtrINS_12SchedulePairEEE
 __ZN7WebCore4Page18setPageScaleFactorEfRKNS_8IntPointE
-__ZN7WebCore4Page18setVisibilityStateENS_19PageVisibilityStateEb
 __ZN7WebCore4Page19addLayoutMilestonesEj
 __ZN7WebCore4Page19visitedStateChangedEPNS_9PageGroupEy
 __ZN7WebCore4Page20setDeviceScaleFactorEf
@@ -2452,6 +2451,10 @@ __ZN7WebCore12Notification16permissionStringENS_18NotificationClient10Permission
 
 #if ENABLE(ORIENTATION_EVENTS)
 __ZN7WebCore5Frame26sendOrientationChangeEventEi
+#endif
+
+#if ENABLE(PAGE_VISIBILITY_API) || ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING)
+__ZN7WebCore4Page18setVisibilityStateENS_19PageVisibilityStateEb
 #endif
 
 #if USE(PLUGIN_HOST_PROCESS)
